<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a20151inf0107.calculadora.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:padding="8dp"
            android:textSize="42sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#424242"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_7"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_7" />

                <Button
                    android:id="@+id/btn_4"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_4" />

                <Button
                    android:id="@+id/btn_1"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_1" />

                <Button
                    android:id="@+id/btn_comma"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/comma" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_8"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_8" />

                <Button
                    android:id="@+id/btn_5"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_5" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_2" />

                <Button
                    android:id="@+id/btn_0"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_9"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_9" />

                <Button
                    android:id="@+id/btn_6"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_6" />

                <Button
                    android:id="@+id/btn_3"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/number_3" />

                <Button
                    android:id="@+id/btn_equals"
                    style="@style/ButtonStyle"
                    android:background="#424242"
                    android:text="@string/equal_sign" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#6d6d6d"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_clear"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/clear"/>

            <Button
                android:id="@+id/btn_delete"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/del" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/divide_sign" />

            <Button
                android:id="@+id/btn_multiply"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/multiply_sign"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_subtract"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/subtract_sign" />

            <Button
                android:id="@+id/btn_sum"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/sum_sign" />
            <Button
                android:id="@+id/btn_swap_sign"
                style="@style/ButtonStyle"
                android:background="#6d6d6d"
                android:text="@string/swap_sign"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="#64ffda"
            android:orientation="vertical">


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
